@@ -819,6 +819,30 @@ protected:
 SCView* NewSCUserView(SCContainerView *inParent, PyrObject* inObj, SCRect inBounds);
 
 
+//
+
+const char kLastTimes = 10;
+class SCAnimationView : public SCUserView
+{
+public:
+	SCAnimationView(SCContainerView *inParent, PyrObject* inObj, SCRect inBounds);
+	virtual ~SCAnimationView();
+	virtual void draw(SCRect inDamage);
+	virtual int setProperty(PyrSymbol *symbol, PyrSlot *slot);;
+protected:
+	bool mShowInfo;
+	char mFontName[kFontNameSize];
+	float mFontSize;
+	SCColor mStringColor;
+	double mLastTimes[kLastTimes];
+	float mAverageRate;
+	char mCounter;
+};
+SCView* NewSCAnimationView(SCContainerView *inParent, PyrObject* inObj, SCRect inBounds);
+
+
+//
+
 enum {
     kSCAlignLeft = -1,
     kSCAlignCenter,
