@@ -4413,6 +4413,79 @@ void SCUserView::refreshInRect(SCRect b)
 	SCView::refreshInRect(b);
 }
 
+
+////////////////////////////////////////////////
+
+SCView* NewSCAnimationView(SCContainerView *inParent, PyrObject* inObj, SCRect inBounds)
+{
+	return new SCAnimationView(inParent, inObj, inBounds);
+}
+
+SCAnimationView::SCAnimationView(SCContainerView *inParent, PyrObject* inObj, SCRect inBounds)
+: SCUserView(inParent, inObj, inBounds)
+{
+	mStringColor = SCMakeColor(0,1,0,1);
+	strcpy(mFontName, "Helvetica");
+	mFontSize = 10.;
+	mClearOnRefresh = true;
+	mRelativeOrigin = false;
+	mDrawingEnabled = true;
+#if MAC_OS_X_VERSION_MAX_ALLOWED >= MAC_OS_X_VERSION_10_4
+	mCGLayer =  NULL;
+#endif
+	mShowInfo = false;
+	for(int i = 0; i<kLastTimes; i++) {
+		mLastTimes[i] = 0.;
+	}
+	mAverageRate = 0.;
+	mCounter = 0;
+	startAnimation();
+}
+
+SCAnimationView::~SCAnimationView()
+{
+	stopAnimation();
+}
+
+void SCAnimationView::draw(SCRect inDamage)
+{
+	SCUserView::draw(inDamage);
+	
+	if(mShowInfo && mDrawingEnabled) {
+		struct timeval tv;
+		gettimeofday(&tv, 0);
+		mLastTimes[mCounter] = (double)tv.tv_sec + 1.0e-6 * (double)tv.tv_usec;
+		if(mCounter%kLastTimes==(kLastTimes-1)) {
+			mCounter = 0;
+			mAverageRate = 0.;
+			for(int i = 0; i<(kLastTimes-1); i++) {
+				mAverageRate = mAverageRate+(mLastTimes[i+1]-mLastTimes[i]);
+			}
+			mAverageRate = 1./(mAverageRate/(kLastTimes-1));
+		} else {
+			mCounter++;
+		}
+		NSString* showInfoString = [NSString stringWithFormat: @"%f", mAverageRate];
+		NSSize size;
+		SCRect showInfoRect;
+		SCRect bounds = getDrawBounds();
+		showInfoRect = SCMakeRect(bounds.x+2, bounds.y+2, 30, 11);
+		nsStringDrawInRectAlign(showInfoString, showInfoRect, mFontName, mFontSize, mStringColor, kSCAlignLeft, -1, &size);
+	}
+}
+
+int SCAnimationView::setProperty(PyrSymbol *symbol, PyrSlot *slot)
+{	
+	char *name = symbol->name;
+	
+	if(strcmp(name, "showInfo")==0) {
+		mShowInfo = IsTrue(slot);
+		return errNone;
+	}
+	return SCUserView::setProperty(symbol, slot);
+}
+
+
 ////////////////////////////////////////////////
 
 SCView* NewSCStaticText(SCContainerView *inParent, PyrObject* inObj, SCRect inBounds)
@@ -6603,6 +6676,7 @@ void registerSCViewClasses()
     new SCViewMaker("SCDragSink", NewSCDragSink);
     new SCViewMaker("SCDragBoth", NewSCDragBoth);
     new SCViewMaker("SCUserView", NewSCUserView);
+	new SCViewMaker("SCAnimationView", NewSCAnimationView);
     new SCViewMaker("SCPopUpMenu", NewSCPopUpMenu);
     new SCViewMaker("SCMultiSliderView", NewSCMultiSliderView);
     new SCViewMaker("SCEnvelopeView", NewSCEnvelopeView);
