@@ -53,6 +53,7 @@ CocoaGUI {
 	*numberBox { ^SCNumberBox }
 	*textField { ^SCTextField }
 	*userView { ^SCUserView }
+	*animationView { ^SCAnimationView }
 	*multiSliderView { ^SCMultiSliderView }
 	*envelopeView { ^SCEnvelopeView }
 	*tabletView { ^SCTabletView }
