@@ -17,6 +17,7 @@ Headlines:
 * 2009-09-20 simplify the Server recording interface. prepareForRecord is now optional (will be automatically invoked if you don't), and the server gui button is now just two-state "record" "stop" - ds
 * 2009-10-04 support multichannel indices for Env:at - jr
 * 2009-10-29 improve OSC message correctness: for convenience, sclang allows command names as symbols with no leading slash e.g. \g_new. To improve compliance with the OSC standard, the leading slash is now added to those symbols before dispatch - ds
+* 2009-11-04 new SCAnimationView and update of deferredTaskInterval from 0.038 to 0.01667 - fo
 
 Bugfixes:
 ---------
